[package]

name = "modules"
version = "0.1.0"
authors = ["Håvard Wormdal Høiby <havardwhoiby@gmail.com>", "Sondre Lefsaker <sondrele@stud.ntnu.no>"]

description = "Experimental highlevel abstractions for emlib"
repository = "https://github.com/RustyGecko/modules"

keywords = ["modules", "emlib"]

[target.thumbv7m-none-eabi.dependencies.core]
git = "https://github.com/RustyGecko/rust-core.git"

[target.thumbv7m-none-eabi.dependencies.emlib]
git = "https://github.com/RustyGecko/emlib.git"
features = ["stk3700"]

[target.thumbv7m-none-eabi.dependencies.emdrv]
git = "https://github.com/RustyGecko/emdrv.git"
features = ["stk3700"]

[target.thumbv7m-none-eabi.dependencies.libc]
git = "https://github.com/RustyGecko/rust-libc.git"

[target.thumbv7m-none-eabi.dependencies.collections]
git = "https://github.com/RustyGecko/rust-collections.git"
